--- a/templates/home.page.go.tmpl
+++ b/templates/home.page.go.tmpl
@@ -5,6 +5,7 @@
         <div class="col">
             <h1>This is the home page</h1>
             <p>this is some text</p>
+            <img src="/static/images/outside.png" class="img-fluid"/>
         </div>
     </div>
 </div>
