--- a/templates/contact.page.go.tmpl
+++ b/templates/contact.page.go.tmpl
@@ -1,4 +1,10 @@
 {{template "base" .}}
 {{define "content"}}
-
+<div class="container my-5">
+    <div class="row">
+        <div class="col">
+            <h1>This is the Contact page</h1>
+        </div>
+    </div>
+</div>
 {{end}}
