--- a/templates/search-availability.page.go.tmpl
+++ b/templates/search-availability.page.go.tmpl
@@ -4,7 +4,8 @@
     <div class="row">
         <div class="col">
             <h1>Search for Availability</h1>
-            <form action="/reservation.html" method="post" novalidate class="needs-validation">
+            <form action="/search-availability" method="post" novalidate class="needs-validation">
+                <input type="hidden" name="csrf_token" value="{{.CSRFToken}}" />
                 <div class="row">
                     <div class="col">
                         <div class="mb-3">
